# rustter

./: .env  .env.example  .gitignore  .tool-versions  Cargo.toml  README.md  justfile
.github/workflows/: deploy-api.yml  deploy-ui.yml  validate.yml
backend/crypto/: Cargo.toml
backend/migrations/2023-02-27-220340_rustter/: up.sql
backend/query/: Cargo.toml
backend/query/src/: bookmark.rs  boost.rs  follow.rs  lib.rs  post.rs  reaction.rs  session.rs  user.rs  vote.rs
backend/server/: .tool-versions  Cargo.toml  Dockerfile  README.md  fly.toml
backend/server/src/: error.rs  extractor.rs  handler.rs  lib.rs  logging.rs  router.rs
backend/server/src/extractor/: DbConnection.rs  UserSession.rs
backend/server/src/handler/: bookmark.rs  boost.rs  post.rs  reaction.rs  user.rs  vote.rs
design/: database.dbm
frontend/: Cargo.toml  Dockerfile  README.md  fly.toml  index.html
frontend/src/: app.rs  elements.rs  main.rs  page.rs  tailwind.css  util.rs
frontend/src/elements/: appbar.rs  keyed_notification_box.rs  local_profile.rs  navbar.rs  post.rs  sidebar.rs  toaster.rs
frontend/src/page/: home.rs  login.rs  new_post.rs  not_found.rs  post.rs  posts.rs  profile.rs  register.rs  trending.rs
frontend/src/util/: api_client.rs  cookie.rs
shared/cookie/: Cargo.toml
shared/cookie/src/: lib.rs
shared/domain/: Cargo.toml
shared/domain/src/: ids.rs  lib.rs  post.rs  user.rs
shared/endpoint/: Cargo.toml
shared/endpoint/src/: lib.rs  reaction.rs
shared/endpoint/src/post/: endpoint.rs  types.rs
shared/endpoint/src/user/: endpoint.rs  types.rs
(+30 files in other folders)
