[package]
name = "rustter_endpoint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
load-dotenv = "0.1.2"
serde = { version = "1.0.188", features = ["derive"] }
thiserror = "1.0.49"
url = { version = "2.4.1", features = ["serde"] }
uuid = { version = "1.4.1", features = ["v4", "js", "serde"] }

rustter_domain = { path = "../domain" }
dotenvy = "0.15.7"
